# schoolab

./: .env  .forgeignore  .gitignore  CHANGELOG.md  LICENSE  README.md  criteres.md  forge.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  updater.json  vite.config.ts  vite.config.ts.timestamp-1768506276115-1fbcd265c772e8.mjs  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.agent/rules/: git.md
.github/workflows/: build.yml
cloud-ecole/: next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  verify-prisma.ts
cloud-ecole/app/: layout.tsx  page.tsx
cloud-ecole/app/admin/: layout.tsx  page.tsx
cloud-ecole/app/login/: page.tsx
cloud-ecole/components/ui/: Logo.tsx
cloud-ecole/lib/: auth.ts  encryption.ts  prisma.ts
cloud-ecole/prisma/: schema.prisma
cloud-ecole/scripts/: setup-admin.ts
dist-web/: index.html
dist-web/assets/: index-4uMOHEtK.css  index-B1BGZTWD.js  index-C2szyViw.css  index-CjoWEA-m.js  index-D58KBkty.css  index-D7-6WLzt.js  index-TFRTJZgf.js  path-Dla1L7rJ.js
docs/: TODO_WORKBENCH.md  architecture.md  plan-transformation-workbench.md  workbench-rfc.md
données debut/: BULLETIN 3ème H ELECT.doc.xlsx
scripts/: check_db.ts  populate-test-data.js  populate-test-data.ts  search.ts
src/: db.ts  main.ts  preload.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tree.txt
src-tauri/capabilities/: default.json
src-tauri/scripts/: build_optimized.sh
src-tauri/src/: db.rs  lib.rs  server.rs  sync.rs
src/constants/: school.ts
src/db/: index.ts  migration.sql  schema.ts
src/main/: licenseService.ts  logger.ts  populateTestData.ts  syncService.ts
src/main/network/: discovery.ts  server.ts  staging.ts  types.ts
src/renderer/: App.tsx  index.css
src/renderer/components/: AcademicYearsManager.tsx  AddNoteModal.tsx  AddStudentModal.tsx  AddSubjectModal.tsx  BatchPrintModal.tsx  Bulletin.tsx  BulletinHumanites.tsx  BulletinHumanitesContent.tsx  BulletinPrimaire.tsx  BulletinPrimaireContent.tsx  Class.tsx  ClassBulletins.tsx  ClassCoupons.tsx  ClassDetails.tsx  ContextMenu.tsx  CouponContent.tsx  CouponEleve.tsx  CouponPeriode.tsx  CouponSemestre.tsx  Dashboard.tsx  DeleteConfirmModal.tsx  EditClassModal.tsx  EditEleve.tsx  ExportExcel.tsx  Layout.tsx  LicenseGuard.tsx  Palmares.tsx  PopulateTestData.tsx  PrintLayout.tsx  PrintWrapper.tsx  ProfessionalLoader.tsx  SetupWizard.tsx  Sidebar.tsx  StartupLoader.tsx  StudentDetails.tsx  StudentTooltip.tsx  Toast.tsx  TopNavigation.tsx  TutorialModal.tsx  iconsSvg.tsx
src/renderer/context/: CacheContext.tsx  LicenseContext.tsx  ThemeContext.tsx  ToastContext.tsx  TutorialContext.tsx  gradebookSelection.ts
src/renderer/data/: changelog.ts
src/renderer/hooks/: useGradePredictor.ts  useGrades.ts  useStudents.ts
src/renderer/lib/: api.ts  classUtils.ts  importUtils.ts
src/renderer/pages/: NotesPage.tsx  SettingsPage.tsx  SyncHistoryPage.tsx
src/renderer/services/: academicYearService.ts  bulletinService.ts  classService.ts  customSortService.ts  databaseService.ts  deliberationConfigService.ts  desktopService.ts  domainService.ts  (+17 more)
src/web-ui/: index.html  vite.config.ts
web-ui/: vite.config.ts
web-ui/src/: App.tsx  index.css
(+121 files in other folders)
