[package]
name = "schoolab"
version = "1.2.8"
description = "Schoolab - Système de gestion scolaire"
authors = ["Angelo"]
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
lazy_static = "1.4"

tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

tiny_http = "0.12"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false
opt-level = "z" # Optimiser pour la taille

